--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.30",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
     "ajv": "^5.0.0",
     "angular-calendar": "^0.20.0",
     "bcrypt": "^1.0.2",
